# TrivialConnections

./: CMakeLists.txt  README.md
include/: Application.h  Direction.h  HarmonicBases.h  LinearContext.h  TreeCotree.h
src/: Mesh.cpp  Vertex.cpp
